Closed Bug 493173 Opened 16 years ago Closed 16 years ago

Download Manager gets stuck in customize toolbar mode when auto-closed with sheet open

Categories

(Camino Graveyard :: Downloading, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: lthompson.22, Assigned: ishermandom+bugs)

Details

(Keywords: fixed1.8.1.22, Whiteboard: regression)

Attachments

(1 file)

1.26 KB, patch
stuart.morgan+bugzilla
: superreview+
Details | Diff | Splinter Review
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9.0.11pre) Gecko/2009051413 Camino/2.0b3pre (like Firefox/3.0.11pre) Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9.0.11pre) Gecko/2009051413 Camino/2.0b3pre (like Firefox/3.0.11pre) This is a dupe of Bug 283359, but that bug is old and fixed so I wasn't sure whether to post there or file anew; sorry if I chose wrong. Steps to Reproduce: 1. In Downloads prefs, check "Close Downloads window". 2. Begin a download. 3. Right-click on the Download Manager toolbar and choose "Customize Toolbar..." 4. Wait for the download to finish; the Download Manager will close automatically even though the customize sheet is still open. 5. Re-open the Download Manager. 3. Right-click on the toolbar and choose "Customize Toolbar..." Actual Results: Nothing happens, no customize sheet appears. Moreover, you can see the spacers and drag the toolbar icons as if in customize mode. I could find no way to get out of this except to quit and re-launch. Expected Results: The Download Manager should either stay open and allow you to finish customizing the toolbar, or it should cancel customize mode before auto-closing so the window is normal when re-opened. I see this issue in 1.6.7, 2.0b2, and recent nightly, all tested with fresh profile. I'm using Leopard 10.5.7. Reproducible: Always
If a fixed bug is more than a couple weeks to a couple months old, it's always best to file anew ;) (I haven't had a chance to look at this myself, so not setting to NEW yet, but it certainly sounds like something that could have regressed in the past 4 years.)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: regression
Attached patch FixSplinter Review
Assignee: nobody → ishermandom+bugs
Status: NEW → ASSIGNED
Attachment #377820 - Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 377820 [details] [diff] [review] Fix sr=smorgan At least we regressed it for a good reason ;)
Attachment #377820 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Checked in on cvs trunk. I'm not sure how common this is, but the fix looks simple enough, so maybe we want it for 1.6.8, too?
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: camino1.6.8?
Resolution: --- → FIXED
Landed on the MOZILLA_1_8_BRANCH in advance of 1.6.8.
Flags: camino1.6.8? → camino1.6.8+
Keywords: fixed1.8.1.22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: