Bug 493173 - Downloads window gets stuck in customize toolbar mode when auto-closed while the customize sheet is showing, so don't close the window while the sheet is showing. Patch by Ilya Sherman <ishermandom+bugs@gmail.com>, r/sr=smorgan